Start work on 6.1 Gaelic

--- a/case-studies.tex
+++ b/case-studies.tex
@@ -1,10 +1,15 @@
 % !TEX root = thesis.tex
 \section{Case Studies}
 \label{sec:case-studies}
+
+After having done a broad review of open source code for low resource languages above, here I dive deeper by looking for resources for two languages in particular: Scottish Gaelic and Naskapi. Both of these are living languages with speaking communities, although their size, coverage by academic research, and political situations are slightly different. Searching for resources for a specific language is most likely the most common use-case for users interested in LRLs, especially as the majority of LRL researchers work with a single language or a suite of languages that they use themselves, as opposed to researchers working on quantitative studies of languages in general. A deep dive should illuminate how open source methodologies can drive language development.
+
 \subsection{Scottish Gaelic}
 \label{sec:gaelic}
 
-Scottish Gaelic is a Celtic language spoken mainly in the United Kingdom, which UNESCO defines as {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}} Gaelic - sometimes called Scots Gaelic, simply Gaelic, or the Gaelic - is a Goidelic or Q-Celtic langauge, along with Manx and Irish (also sometimes called Irish Gaelic, but here always referred to as Irish). This means that, while related to the Brythonic languages of Welsh, Cornish and Breton, it is different enough to not be able to benefit from the many resources available in Welsh, which, while endangered, has a much stronger academic interest and presence in the United Kingdom, with roughly half a million speakers.
+Scottish Gaelic is a Celtic language spoken by roughly 60,000 people mainly in the United Kingdom and to a lesser extent in Canada, which UNESCO defines as {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}} Gaelic - sometimes called Scots Gaelic, simply Gaelic, or the Gaelic - is a Goidelic or Q-Celtic language, along with Manx and Irish (also sometimes called Irish Gaelic, but here always referred to as Irish). This means that, while related to the Brythonic languages of Welsh, Cornish and Breton, it is different enough to not be able to benefit from the many resources available in Welsh, which, while endangered, has a much stronger academic interest and presence in the United Kingdom, with roughly half a million speakers.
+
+The 2011 Scottish Census indicates that out of the total amount of Gaelic speakers, only around half - 32,191 person to be exact - read and write in Gaelic.\footnote{\href{http://www.scotlandscensus.gov.uk/}{http://www.scotlandscensus.gov.uk/. Last accessed April~27, 2018.}} 6,218 speak and read the language, but do not write it, while 4,646 can read it, but don't speak or write it. Gaelic officially is not a national language, although it is afforded certain protections under the European Charter for Regional or Minority Languages\footnote{\href{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148}{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148. Last accessed April~27, 2018.}} (although, as this is an EU charter, it is unclear whether Britain will continue to ratify it following their impending exit from the European Union). The Gaelic Language (Scotland) Act of 2005 gave Gaelic official status as an official language of Scotland\footnote{\href{http://www.legislation.gov.uk/asp/2005/7}{http://www.legislation.gov.uk/asp/2005/7. Last accessed April~27, 2018.}}, and set up the B\`ord na G\`aidhlig\footnote{\href{http://www.gaidhlig.scot/}{http://www.gaidhlig.scot/. Last accessed April~27, 2018.}} as a language developmental body tasked with protecting and vitalising the Gaelic language. The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/. Last accessed April~27, 2018.}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG)\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en. Last accessed April~27, 2018.}}, the largest corpus project for Gaelic, but don't specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. 
 
 
 A large corpus compiled by the An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \citep{scannell2007crubadan}. % Mentioned directly in the text
