--- a/references.bib
+++ b/references.bib
@@ -335,6 +335,12 @@ publisher={Blackwell}
   publisher={Elsevier}
 }
 
+@misc{bord2018national,
+  title={National Gaelic Language Plan 2018-2023},
+  author={{B\`ord na G\`aidhlig}},
+  year={2018},
+  publisher={B\`ord na G\`aidhlig}
+}
 
 @article{cushman2013wampum,
   title={Wampum, {Sequoyan}, and story: decolonizing the digital archive},
