--- a/references.bib
+++ b/references.bib
@@ -58,7 +58,7 @@
 
 
 @misc{lsa2008ethics,
-  title={Linguistic Society of America Ethics Statement},
+  title={{Linguistic Society of America} Ethics Statement},
   author={Claire Bowern and Lise Dobrin and Penny Eckert and Ted Gibson and Jane Hill and Keith Johnson and Jack Martin and Philip Rubin and Susan Steele and Sara Trechter and Monica Macaulay},
   publisher={Linguistic Society of America},
   year={2008}
@@ -141,7 +141,7 @@
 @inproceedings{mccrae2016open,
   title={The Open Linguistics Working Group: Developing the Linguistic Linked Open Data Cloud.},
   author={McCrae, John P and Chiarcos, Christian and Bond, Francis and Cimiano, Philipp and Declerck, Thierry and de Melo, Gerard and Gracia, Jorge and Hellmann, Sebastian and Klimek, Bettina and Moran, Steven and others},
-  booktitle={LREC},
+  booktitle={Proceedings of the 10th International Conference on Language Resources and Evaluation ({LREC}},
   year={2016}
 }
 
@@ -336,7 +336,7 @@ publisher={Blackwell}
 }
 
 @misc{bord2018national,
-  title={National Gaelic Language Plan 2018-2023},
+  title={National {Gaelic} Language Plan 2018-2023},
   author={{B\`ord na G\`aidhlig}},
   year={2018},
   publisher={B\`ord na G\`aidhlig}
@@ -392,7 +392,7 @@ publisher={Blackwell}
 @inproceedings{calzolari2012lre,
   title={The {LRE Map}. Harmonising Community Descriptions of Resources.},
   author={Calzolari, Nicoletta and Del Gratta, Riccardo and Francopoulo, Gil and Mariani, Joseph and Rubino, Francesco and Russo, Irene and Soria, Claudia},
-  booktitle={LREC},
+  booktitle={Proceedings of the 8th International Conference on Language Resources and Evaluation ({LREC}},
   pages={1084--1089},
   year={2012}
 }
@@ -430,8 +430,9 @@ publisher={Blackwell}
 @article{drellishak2005coordination,
   title={Coordination Modules for a Crosslinguistic Grammar Resource},
   author={Drellishak, Scott and Bender, Emily M},
-  journal={D epartam ento de Inform {\'a}tica Facu ld ad ede C i{\^e}ncias da U niversid ad ede L isb oa C am po G rande, 1749--016 L isboa Portu gal},
-  pages={29},
+  journal={Departamento de Inform{\'a}tica Faculdadede C i{\^e}ncias da Universidade de Lisboa},
+  pages={29-33},
+  address={Lisboa, Portugal},
   year={2005}
 }
 
@@ -1229,7 +1230,7 @@ title = {Directory International cooperation programs for the protection and pro
 @inproceedings{chiarcos2012open,
  title={The {Open Linguistics Working Group}},
  author={Chiarcos, Christian and Hellmann, Sebastian and Nordhoff, Sebastian and Moran, Steven and Littauer, Richard and Eckle-Kohler, Judith and Gurevych, Iryna and Hartmann, Silvana and Matuschek, Michael and Meyer, Christian M},
- booktitle={LREC},
+ booktitle={Proceedings of the 8th International Conference on Language Resources and Evaluation ({LREC})},
  pages={3603--3610},
  year={2012}
 }
@@ -1311,7 +1312,7 @@ title = {Directory International cooperation programs for the protection and pro
 @inproceedings{maegaard2006blark,
   title={The {BLARK} concept and {BLARK} for {Arabic}},
   author={Maegaard, Bente and Krauwer, Steven and Choukri, Khalid and J{\o}rgensen, L},
-  booktitle={Proc. LREC},
+  booktitle={Proceedings of the 5th International Conference on Language Resources and Evaluation ({LREC}},
   pages={773--778},
   year={2006}
 }
@@ -1319,21 +1320,21 @@ title = {Directory International cooperation programs for the protection and pro
 @inproceedings{binnenpoorte2002towards,
   title={Towards a roadmap for human language technologies: {Dutch-Flemish} experience},
   author={Binnenpoorte, Diana and Cucchiarini, Catia and D'Halleweyn, Elisabeth and Sturm, Janienke and De Vriend, Folkert},
-  booktitle={Proceedings lrec 2002},
+  booktitle={Proceedings of the 3rd International Conference on Language Resources and Evaluation ({LREC}},
   year={2002}
 }
 
 @inproceedings{elenius2008language,
   title={Language Resources and Tools for {Swedish}: A Survey},
   author={Elenius, Kjell and Forsbom, Eva and Megyesi, Be{\'a}ta},
-  booktitle={LREC},
+  booktitle={Proceedings of the 6th International Conference on Language Resources and Evaluation ({LREC}},
   year={2008}
 }
 
 @inproceedings{simov2004language,
   title={A Language Resources Infrastructure for {Bulgarian}},
   author={Simov, Kiril Ivanov and Osenova, Petya and Kolkovska, Sia and Balabanova, Elisaveta and Doikoff, Dimitar},
-  booktitle={LREC},
+  booktitle={Proceedings of the 3rd International Conference on Language Resources and Evaluation ({LREC}},
   year={2004}
 }
 
@@ -1473,7 +1474,7 @@ title = {Directory International cooperation programs for the protection and pro
 @inproceedings{calzolari2010lrec,
   title={The {LREC} map of language resources and technologies},
   author={Calzolari, Nicoletta and Soria, Claudia and Del Gratta, Riccardo and Goggi, Sara and Quochi, Valeria and Russo, Irene and Choukri, Khalid and Mariani, Joseph and Piperidis, Stelios},
-  booktitle={Proceedings of the Seventh conference on International Language Resources and Evaluation (LREC'10)},
+  booktitle={Proceedings of the 7th Conference on International Language Resources and Evaluation ({LREC})},
   year={2010}
 }
 
